--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -151,6 +151,8 @@
     <Compile Include="src\services\translators\name_factories\CNameFactory.cs" />
     <Compile Include="src\services\translators\name_factories\INameFactory.cs" />
     <Compile Include="src\services\translators\CTranslatorConstants.cs" />
+    <Compile Include="src\domain\SyntaxTree\VariableEvaluee.cs" />
+    <Compile Include="src\services\translators\name_factories\CTempVarPool.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\services\translators\" />
